refactor: clean code
- use redis

- add comments

- use filter

- assign small tasks to proper  services

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,7 @@ DB_DATABASE=db
 DB_USERNAME=username
 DB_PASSWORD=password
 DB_URL="postgresql://username:password@postgres:5432/db?schema=public"
+
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_PASSWORD=password
