--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@nestjs/platform-socket.io": "^8.2.5",
     "@nestjs/websockets": "^8.2.5",
     "@prisma/client": "3.8.1",
+    "@socket.io/redis-adapter": "^7.1.0",
+    "@socket.io/redis-emitter": "^4.1.1",
     "bcryptjs": "^2.4.3",
     "cache-manager": "^3.6.0",
     "cache-manager-redis-store": "^2.0.0",
