--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
         volumes:
             - ./:/app
         ports:
-            - 3000:${CHAT_PORT}
+            - 3000:${SOCKET_PORT}
         entrypoint:
             - /bin/sh
         command:
