feat: add real-time chat (#1)
* chore: add .env.example

* chore: add PAT seeder

* feat: add authentication

* feat: notify if friends are online

* feat: make data more structured

* feat: send private message

* refactor: clean code

- use redis

- add comments

- use filter

- assign small tasks to proper  services

* fix: send message without friend relationship

* fix: handle unauthenticated socket disconnection

* fix(cache): unset ttl for `socket:ids` and `socket:sids`

* refactor: use

* feat(socket.io): use redis adapter

* refactor: add comments and modify response event

* refactor: add room feature

* refactor: modify event name

* refactor: modify types

* fix: password required to create private room

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,16 +8,18 @@ services:
         volumes:
             - ./:/app
         ports:
-            - 3000:${CHAT_PORT}
+            - 3000:${SOCKET_PORT}
         entrypoint:
             - /bin/sh
         command:
             - -c
-            - npx pnpm start:dev
+            - npm run start:dev
         networks:
             - postgres-network
+            - redis-network
         depends_on:
             - postgres
+            - redis
         restart: unless-stopped
 
     postgres:
@@ -42,5 +44,31 @@ services:
             - postgres
         restart: unless-stopped
 
+    redis:
+        image: redis:6.2.5-alpine3.14
+        environment:
+            - REDIS_PASSWORD=${REDIS_PASSWORD}
+        volumes:
+          - ./.docker/redis/data:/data
+        command: redis-server --requirepass ${REDIS_PASSWORD}
+        networks:
+            - redis-network
+        restart: unless-stopped
+
+    rediscommander:
+        image: rediscommander/redis-commander:latest
+        environment:
+            REDIS_HOST: ${REDIS_HOST}
+            REDIS_PORT: ${REDIS_PORT}
+            REDIS_PASSWORD: ${REDIS_PASSWORD}
+        ports:
+            - 8082:8081
+        networks:
+            - redis-network
+        depends_on:
+            - redis
+        restart: unless-stopped
+
 networks:
     postgres-network:
+    redis-network:
